src/autopas/tuning/tuningStrategy/fuzzyTuning/parser_generated/autopas_generated_fuzzy_rule_syntax/FuzzyLanguageParser.cpp

// Generated from
// AutoPas/src/autopas/tuning/tuningStrategy/fuzzyTuning\FuzzyLanguage.g4 by
// ANTLR 4.9.1

#include "FuzzyLanguageParser.h"

#include "FuzzyLanguageVisitor.h"

using namespace antlrcpp;
using namespace autopas_generated_fuzzy_rule_syntax;
using namespace antlr4;

FuzzyLanguageParser::FuzzyLanguageParser(TokenStream *input) : Parser(input) {
  _interpreter = new atn::ParserATNSimulator(this, _atn, _decisionToDFA, _sharedContextCache);
}

FuzzyLanguageParser::~FuzzyLanguageParser() { delete _interpreter; }

std::string FuzzyLanguageParser::getGrammarFileName() const { return "FuzzyLanguage.g4"; }

const std::vector<std::string> &FuzzyLanguageParser::getRuleNames() const { return _ruleNames; }

dfa::Vocabulary &FuzzyLanguageParser::getVocabulary() const { return _vocabulary; }

//----------------- Rule_fileContext ------------------------------------------------------------------

FuzzyLanguageParser::Rule_fileContext::Rule_fileContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

FuzzyLanguageParser::SettingsContext *FuzzyLanguageParser::Rule_fileContext::settings() {
  return getRuleContext<FuzzyLanguageParser::SettingsContext>(0);
}

FuzzyLanguageParser::Output_mappingContext *FuzzyLanguageParser::Rule_fileContext::output_mapping() {
  return getRuleContext<FuzzyLanguageParser::Output_mappingContext>(0);
}

tree::TerminalNode *FuzzyLanguageParser::Rule_fileContext::EOF() { return getToken(FuzzyLanguageParser::EOF, 0); }

std::vector<FuzzyLanguageParser::Linguistic_variableContext *>
FuzzyLanguageParser::Rule_fileContext::linguistic_variable() {
  return getRuleContexts<FuzzyLanguageParser::Linguistic_variableContext>();
}

FuzzyLanguageParser::Linguistic_variableContext *FuzzyLanguageParser::Rule_fileContext::linguistic_variable(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Linguistic_variableContext>(i);
}

std::vector<FuzzyLanguageParser::Fuzzy_ruleContext *> FuzzyLanguageParser::Rule_fileContext::fuzzy_rule() {
  return getRuleContexts<FuzzyLanguageParser::Fuzzy_ruleContext>();
}

FuzzyLanguageParser::Fuzzy_ruleContext *FuzzyLanguageParser::Rule_fileContext::fuzzy_rule(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_ruleContext>(i);
}

size_t FuzzyLanguageParser::Rule_fileContext::getRuleIndex() const { return FuzzyLanguageParser::RuleRule_file; }

antlrcpp::Any FuzzyLanguageParser::Rule_fileContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitRule_file(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Rule_fileContext *FuzzyLanguageParser::rule_file() {
  Rule_fileContext *_localctx = _tracker.createInstance<Rule_fileContext>(_ctx, getState());
  enterRule(_localctx, 0, FuzzyLanguageParser::RuleRule_file);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(22);
    settings();
    setState(26);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FuzzyLanguageParser::T__3) {
      setState(23);
      linguistic_variable();
      setState(28);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(29);
    output_mapping();
    setState(33);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FuzzyLanguageParser::T__9) {
      setState(30);
      fuzzy_rule();
      setState(35);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(36);
    match(FuzzyLanguageParser::EOF);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- SettingsContext ------------------------------------------------------------------

FuzzyLanguageParser::SettingsContext::SettingsContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::SettingsContext::STRING() { return getToken(FuzzyLanguageParser::STRING, 0); }

size_t FuzzyLanguageParser::SettingsContext::getRuleIndex() const { return FuzzyLanguageParser::RuleSettings; }

antlrcpp::Any FuzzyLanguageParser::SettingsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitSettings(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::SettingsContext *FuzzyLanguageParser::settings() {
  SettingsContext *_localctx = _tracker.createInstance<SettingsContext>(_ctx, getState());
  enterRule(_localctx, 2, FuzzyLanguageParser::RuleSettings);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(38);
    match(FuzzyLanguageParser::T__0);
    setState(39);
    match(FuzzyLanguageParser::T__1);
    setState(40);
    match(FuzzyLanguageParser::T__2);
    setState(41);
    match(FuzzyLanguageParser::T__1);
    setState(42);
    dynamic_cast<SettingsContext *>(_localctx)->defuzzificationMethod = match(FuzzyLanguageParser::STRING);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Linguistic_variableContext ------------------------------------------------------------------

FuzzyLanguageParser::Linguistic_variableContext::Linguistic_variableContext(ParserRuleContext *parent,
                                                                            size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::Linguistic_variableContext::STRING() {
  return getToken(FuzzyLanguageParser::STRING, 0);
}

std::vector<tree::TerminalNode *> FuzzyLanguageParser::Linguistic_variableContext::NUMBER() {
  return getTokens(FuzzyLanguageParser::NUMBER);
}

tree::TerminalNode *FuzzyLanguageParser::Linguistic_variableContext::NUMBER(size_t i) {
  return getToken(FuzzyLanguageParser::NUMBER, i);
}

std::vector<FuzzyLanguageParser::Fuzzy_termContext *> FuzzyLanguageParser::Linguistic_variableContext::fuzzy_term() {
  return getRuleContexts<FuzzyLanguageParser::Fuzzy_termContext>();
}

FuzzyLanguageParser::Fuzzy_termContext *FuzzyLanguageParser::Linguistic_variableContext::fuzzy_term(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_termContext>(i);
}

size_t FuzzyLanguageParser::Linguistic_variableContext::getRuleIndex() const {
  return FuzzyLanguageParser::RuleLinguistic_variable;
}

antlrcpp::Any FuzzyLanguageParser::Linguistic_variableContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitLinguistic_variable(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Linguistic_variableContext *FuzzyLanguageParser::linguistic_variable() {
  Linguistic_variableContext *_localctx = _tracker.createInstance<Linguistic_variableContext>(_ctx, getState());
  enterRule(_localctx, 4, FuzzyLanguageParser::RuleLinguistic_variable);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(44);
    match(FuzzyLanguageParser::T__3);
    setState(45);
    match(FuzzyLanguageParser::T__1);
    setState(46);
    match(FuzzyLanguageParser::T__4);
    setState(47);
    match(FuzzyLanguageParser::T__1);
    setState(48);
    match(FuzzyLanguageParser::STRING);
    setState(49);
    match(FuzzyLanguageParser::T__5);
    setState(50);
    match(FuzzyLanguageParser::T__1);
    setState(51);
    match(FuzzyLanguageParser::T__6);
    setState(52);
    match(FuzzyLanguageParser::NUMBER);
    setState(53);
    match(FuzzyLanguageParser::T__7);
    setState(54);
    match(FuzzyLanguageParser::NUMBER);
    setState(55);
    match(FuzzyLanguageParser::T__8);
    setState(57);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(56);
      fuzzy_term();
      setState(59);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FuzzyLanguageParser::STRING);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fuzzy_termContext ------------------------------------------------------------------

FuzzyLanguageParser::Fuzzy_termContext::Fuzzy_termContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::Fuzzy_termContext::STRING() {
  return getToken(FuzzyLanguageParser::STRING, 0);
}

FuzzyLanguageParser::FunctionContext *FuzzyLanguageParser::Fuzzy_termContext::function() {
  return getRuleContext<FuzzyLanguageParser::FunctionContext>(0);
}

size_t FuzzyLanguageParser::Fuzzy_termContext::getRuleIndex() const { return FuzzyLanguageParser::RuleFuzzy_term; }

antlrcpp::Any FuzzyLanguageParser::Fuzzy_termContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitFuzzy_term(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Fuzzy_termContext *FuzzyLanguageParser::fuzzy_term() {
  Fuzzy_termContext *_localctx = _tracker.createInstance<Fuzzy_termContext>(_ctx, getState());
  enterRule(_localctx, 6, FuzzyLanguageParser::RuleFuzzy_term);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(61);
    match(FuzzyLanguageParser::STRING);
    setState(62);
    match(FuzzyLanguageParser::T__1);
    setState(63);
    function();

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- FunctionContext ------------------------------------------------------------------

FuzzyLanguageParser::FunctionContext::FunctionContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::FunctionContext::IDENTIFIER() {
  return getToken(FuzzyLanguageParser::IDENTIFIER, 0);
}

std::vector<tree::TerminalNode *> FuzzyLanguageParser::FunctionContext::NUMBER() {
  return getTokens(FuzzyLanguageParser::NUMBER);
}

tree::TerminalNode *FuzzyLanguageParser::FunctionContext::NUMBER(size_t i) {
  return getToken(FuzzyLanguageParser::NUMBER, i);
}

size_t FuzzyLanguageParser::FunctionContext::getRuleIndex() const { return FuzzyLanguageParser::RuleFunction; }

antlrcpp::Any FuzzyLanguageParser::FunctionContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitFunction(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::FunctionContext *FuzzyLanguageParser::function() {
  FunctionContext *_localctx = _tracker.createInstance<FunctionContext>(_ctx, getState());
  enterRule(_localctx, 8, FuzzyLanguageParser::RuleFunction);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(65);
    match(FuzzyLanguageParser::IDENTIFIER);
    setState(66);
    match(FuzzyLanguageParser::T__6);
    setState(67);
    match(FuzzyLanguageParser::NUMBER);
    setState(72);
    _errHandler->sync(this);
    _la = _input->LA(1);
    while (_la == FuzzyLanguageParser::T__7) {
      setState(68);
      match(FuzzyLanguageParser::T__7);
      setState(69);
      match(FuzzyLanguageParser::NUMBER);
      setState(74);
      _errHandler->sync(this);
      _la = _input->LA(1);
    }
    setState(75);
    match(FuzzyLanguageParser::T__8);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fuzzy_ruleContext ------------------------------------------------------------------

FuzzyLanguageParser::Fuzzy_ruleContext::Fuzzy_ruleContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<FuzzyLanguageParser::Fuzzy_setContext *> FuzzyLanguageParser::Fuzzy_ruleContext::fuzzy_set() {
  return getRuleContexts<FuzzyLanguageParser::Fuzzy_setContext>();
}

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::Fuzzy_ruleContext::fuzzy_set(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_setContext>(i);
}

size_t FuzzyLanguageParser::Fuzzy_ruleContext::getRuleIndex() const { return FuzzyLanguageParser::RuleFuzzy_rule; }

antlrcpp::Any FuzzyLanguageParser::Fuzzy_ruleContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitFuzzy_rule(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Fuzzy_ruleContext *FuzzyLanguageParser::fuzzy_rule() {
  Fuzzy_ruleContext *_localctx = _tracker.createInstance<Fuzzy_ruleContext>(_ctx, getState());
  enterRule(_localctx, 10, FuzzyLanguageParser::RuleFuzzy_rule);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(77);
    match(FuzzyLanguageParser::T__9);
    setState(78);
    fuzzy_set(0);
    setState(79);
    match(FuzzyLanguageParser::T__10);
    setState(80);
    fuzzy_set(0);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Fuzzy_setContext ------------------------------------------------------------------

FuzzyLanguageParser::Fuzzy_setContext::Fuzzy_setContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

size_t FuzzyLanguageParser::Fuzzy_setContext::getRuleIndex() const { return FuzzyLanguageParser::RuleFuzzy_set; }

void FuzzyLanguageParser::Fuzzy_setContext::copyFrom(Fuzzy_setContext *ctx) { ParserRuleContext::copyFrom(ctx); }

//----------------- OrContext ------------------------------------------------------------------

std::vector<FuzzyLanguageParser::Fuzzy_setContext *> FuzzyLanguageParser::OrContext::fuzzy_set() {
  return getRuleContexts<FuzzyLanguageParser::Fuzzy_setContext>();
}

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::OrContext::fuzzy_set(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_setContext>(i);
}

FuzzyLanguageParser::OrContext::OrContext(Fuzzy_setContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FuzzyLanguageParser::OrContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitOr(this);
  else
    return visitor->visitChildren(this);
}
//----------------- BracketsContext ------------------------------------------------------------------

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::BracketsContext::fuzzy_set() {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_setContext>(0);
}

FuzzyLanguageParser::BracketsContext::BracketsContext(Fuzzy_setContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FuzzyLanguageParser::BracketsContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitBrackets(this);
  else
    return visitor->visitChildren(this);
}
//----------------- AndContext ------------------------------------------------------------------

std::vector<FuzzyLanguageParser::Fuzzy_setContext *> FuzzyLanguageParser::AndContext::fuzzy_set() {
  return getRuleContexts<FuzzyLanguageParser::Fuzzy_setContext>();
}

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::AndContext::fuzzy_set(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_setContext>(i);
}

FuzzyLanguageParser::AndContext::AndContext(Fuzzy_setContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FuzzyLanguageParser::AndContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitAnd(this);
  else
    return visitor->visitChildren(this);
}
//----------------- SelectContext ------------------------------------------------------------------

std::vector<tree::TerminalNode *> FuzzyLanguageParser::SelectContext::STRING() {
  return getTokens(FuzzyLanguageParser::STRING);
}

tree::TerminalNode *FuzzyLanguageParser::SelectContext::STRING(size_t i) {
  return getToken(FuzzyLanguageParser::STRING, i);
}

FuzzyLanguageParser::SelectContext::SelectContext(Fuzzy_setContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FuzzyLanguageParser::SelectContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitSelect(this);
  else
    return visitor->visitChildren(this);
}
//----------------- NegateContext ------------------------------------------------------------------

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::NegateContext::fuzzy_set() {
  return getRuleContext<FuzzyLanguageParser::Fuzzy_setContext>(0);
}

FuzzyLanguageParser::NegateContext::NegateContext(Fuzzy_setContext *ctx) { copyFrom(ctx); }

antlrcpp::Any FuzzyLanguageParser::NegateContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitNegate(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::fuzzy_set() { return fuzzy_set(0); }

FuzzyLanguageParser::Fuzzy_setContext *FuzzyLanguageParser::fuzzy_set(int precedence) {
  ParserRuleContext *parentContext = _ctx;
  size_t parentState = getState();
  FuzzyLanguageParser::Fuzzy_setContext *_localctx = _tracker.createInstance<Fuzzy_setContext>(_ctx, parentState);
  FuzzyLanguageParser::Fuzzy_setContext *previousContext = _localctx;
  (void)previousContext;  // Silence compiler, in case the context is not used by generated code.
  size_t startState = 12;
  enterRecursionRule(_localctx, 12, FuzzyLanguageParser::RuleFuzzy_set, precedence);

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    unrollRecursionContexts(parentContext);
  });
  try {
    size_t alt;
    enterOuterAlt(_localctx, 1);
    setState(92);
    _errHandler->sync(this);
    switch (_input->LA(1)) {
      case FuzzyLanguageParser::T__6: {
        _localctx = _tracker.createInstance<BracketsContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;

        setState(83);
        match(FuzzyLanguageParser::T__6);
        setState(84);
        fuzzy_set(0);
        setState(85);
        match(FuzzyLanguageParser::T__8);
        break;
      }

      case FuzzyLanguageParser::T__13: {
        _localctx = _tracker.createInstance<NegateContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(87);
        match(FuzzyLanguageParser::T__13);
        setState(88);
        fuzzy_set(2);
        break;
      }

      case FuzzyLanguageParser::STRING: {
        _localctx = _tracker.createInstance<SelectContext>(_localctx);
        _ctx = _localctx;
        previousContext = _localctx;
        setState(89);
        match(FuzzyLanguageParser::STRING);
        setState(90);
        match(FuzzyLanguageParser::T__14);
        setState(91);
        match(FuzzyLanguageParser::STRING);
        break;
      }

      default:
        throw NoViableAltException(this);
    }
    _ctx->stop = _input->LT(-1);
    setState(102);
    _errHandler->sync(this);
    alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    while (alt != 2 && alt != atn::ATN::INVALID_ALT_NUMBER) {
      if (alt == 1) {
        if (!_parseListeners.empty()) triggerExitRuleEvent();
        previousContext = _localctx;
        setState(100);
        _errHandler->sync(this);
        switch (getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 5, _ctx)) {
          case 1: {
            auto newContext = _tracker.createInstance<AndContext>(
                _tracker.createInstance<Fuzzy_setContext>(parentContext, parentState));
            _localctx = newContext;
            pushNewRecursionContext(newContext, startState, RuleFuzzy_set);
            setState(94);

            if (!(precpred(_ctx, 4))) throw FailedPredicateException(this, "precpred(_ctx, 4)");
            setState(95);
            match(FuzzyLanguageParser::T__11);
            setState(96);
            fuzzy_set(5);
            break;
          }

          case 2: {
            auto newContext = _tracker.createInstance<OrContext>(
                _tracker.createInstance<Fuzzy_setContext>(parentContext, parentState));
            _localctx = newContext;
            pushNewRecursionContext(newContext, startState, RuleFuzzy_set);
            setState(97);

            if (!(precpred(_ctx, 3))) throw FailedPredicateException(this, "precpred(_ctx, 3)");
            setState(98);
            match(FuzzyLanguageParser::T__12);
            setState(99);
            fuzzy_set(4);
            break;
          }

          default:
            break;
        }
      }
      setState(104);
      _errHandler->sync(this);
      alt = getInterpreter<atn::ParserATNSimulator>()->adaptivePredict(_input, 6, _ctx);
    }
  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }
  return _localctx;
}

//----------------- Output_mappingContext ------------------------------------------------------------------

FuzzyLanguageParser::Output_mappingContext::Output_mappingContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

std::vector<FuzzyLanguageParser::Output_entryContext *> FuzzyLanguageParser::Output_mappingContext::output_entry() {
  return getRuleContexts<FuzzyLanguageParser::Output_entryContext>();
}

FuzzyLanguageParser::Output_entryContext *FuzzyLanguageParser::Output_mappingContext::output_entry(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Output_entryContext>(i);
}

size_t FuzzyLanguageParser::Output_mappingContext::getRuleIndex() const {
  return FuzzyLanguageParser::RuleOutput_mapping;
}

antlrcpp::Any FuzzyLanguageParser::Output_mappingContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitOutput_mapping(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Output_mappingContext *FuzzyLanguageParser::output_mapping() {
  Output_mappingContext *_localctx = _tracker.createInstance<Output_mappingContext>(_ctx, getState());
  enterRule(_localctx, 14, FuzzyLanguageParser::RuleOutput_mapping);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(105);
    match(FuzzyLanguageParser::T__15);
    setState(106);
    match(FuzzyLanguageParser::T__1);
    setState(108);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(107);
      output_entry();
      setState(110);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FuzzyLanguageParser::STRING);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Output_entryContext ------------------------------------------------------------------

FuzzyLanguageParser::Output_entryContext::Output_entryContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::Output_entryContext::STRING() {
  return getToken(FuzzyLanguageParser::STRING, 0);
}

std::vector<FuzzyLanguageParser::Pattern_mappingContext *> FuzzyLanguageParser::Output_entryContext::pattern_mapping() {
  return getRuleContexts<FuzzyLanguageParser::Pattern_mappingContext>();
}

FuzzyLanguageParser::Pattern_mappingContext *FuzzyLanguageParser::Output_entryContext::pattern_mapping(size_t i) {
  return getRuleContext<FuzzyLanguageParser::Pattern_mappingContext>(i);
}

size_t FuzzyLanguageParser::Output_entryContext::getRuleIndex() const { return FuzzyLanguageParser::RuleOutput_entry; }

antlrcpp::Any FuzzyLanguageParser::Output_entryContext::accept(tree::ParseTreeVisitor *visitor) {
  if (auto parserVisitor = dynamic_cast<FuzzyLanguageVisitor *>(visitor))
    return parserVisitor->visitOutput_entry(this);
  else
    return visitor->visitChildren(this);
}

FuzzyLanguageParser::Output_entryContext *FuzzyLanguageParser::output_entry() {
  Output_entryContext *_localctx = _tracker.createInstance<Output_entryContext>(_ctx, getState());
  enterRule(_localctx, 16, FuzzyLanguageParser::RuleOutput_entry);
  size_t _la = 0;

#if __cplusplus > 201703L
  auto onExit = finally([=, this] {
#else
  auto onExit = finally([=] {
#endif
    exitRule();
  });
  try {
    enterOuterAlt(_localctx, 1);
    setState(112);
    match(FuzzyLanguageParser::STRING);
    setState(113);
    match(FuzzyLanguageParser::T__1);
    setState(115);
    _errHandler->sync(this);
    _la = _input->LA(1);
    do {
      setState(114);
      pattern_mapping();
      setState(117);
      _errHandler->sync(this);
      _la = _input->LA(1);
    } while (_la == FuzzyLanguageParser::NUMBER);

  } catch (RecognitionException &e) {
    _errHandler->reportError(this, e);
    _localctx->exception = std::current_exception();
    _errHandler->recover(this, _localctx->exception);
  }

  return _localctx;
}

//----------------- Pattern_mappingContext ------------------------------------------------------------------

FuzzyLanguageParser::Pattern_mappingContext::Pattern_mappingContext(ParserRuleContext *parent, size_t invokingState)
    : ParserRuleContext(parent, invokingState) {}

tree::TerminalNode *FuzzyLanguageParser::Pattern_mappingContext::NUMBER() {
  return getToken(FuzzyLanguageParser::NUMBER, 0);
}
